5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1667_2968.log
== TEST (2019-04-16 16:39:14) 
-- CODE:
L = int(5.00)
S = int(3.50)
R = int(4.00)

item1 = (L + S)

print(item1)

print(R)
-- OUTPUT:
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:39:20) 
-- CODE:
L = int(5.00)
S = int(3.50)
R = int(4.00)

item1 = (L + S)

print(item1)

print(R)
-- EXECUTION TIME:
0.151425
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
8
4
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
8
4
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
8
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:22) 
-- CODE:
L = int(5.00)
S = int(3.50)
R = int(4.00)

item1 = (L + S)

print(item1)

print(R)
-- OUTPUT:
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:19) 
-- CODE:
L = int(5.00)
S = int(3.50)
R = int(4.00)

item1 = (L + S)

print(item1)

print(R)
-- EXECUTION TIME:
0.231991
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
8
4
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
8
4
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
8
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:55) 
-- CODE:
Lache = "L"
Salgado = "S"
Refrigerante = "R"

print(Lanche)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:57) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = ("R")

print(Lanche)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:00) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = ("R")

print(Lanche)

-- EXECUTION TIME:
0.192918
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:21) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal+refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:23) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal+refrig)




-- EXECUTION TIME:
0.109806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:39) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal)
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:40) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal)
print(refrig)




-- EXECUTION TIME:
0.169801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:41) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal)
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:52) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal)
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:54) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = int(2)
refrig = int(1)

print(lancsal)
print(refrig)




-- EXECUTION TIME:
0.128692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:23) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
refrig = 1

print(lancsal)
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:52:25) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
refrig = 1

print(lancsal)
print(refrig)




-- EXECUTION TIME:
0.211243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:26) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
refrig = 1

print(lancsal)
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:05) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:07) 
-- CODE:
Lache = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- EXECUTION TIME:
0.140572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 5, in <module>
    print(Lanche)
NameError: name 'Lanche' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:22) 
-- CODE:
Lanche = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- OUTPUT:
S
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:23) 
-- CODE:
Lanche = input("L")
Salgado = input("S")
Refrigerante = input("R")

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- EXECUTION TIME:
0.125637
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
S
2
1
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
L
2
1
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
S
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:41) 
-- CODE:
Lanche = "L"
Salgado = "S"
Refrigerante = "R"

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- OUTPUT:
L
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:43) 
-- CODE:
Lanche = "L"
Salgado = "S"
Refrigerante = "R"

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- EXECUTION TIME:
0.139997
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
L
2
1
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
L
2
1
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
L
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:46) 
-- CODE:
Lanche = "L"
Salgado = "S"
Refrigerante = "R"

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- OUTPUT:
L
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:51) 
-- CODE:
Lanche = "L"
Salgado = "S"
Refrigerante = "R"

print(Lanche)

lancsal = 2
print(lancsal)

refrig = 1
print(refrig)




-- EXECUTION TIME:
0.181991
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
L
2
1
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
L
2
1
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
L
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
